--- a/.github/workflows/gcc-unified.yml
+++ b/.github/workflows/gcc-unified.yml
@@ -4,6 +4,7 @@ on:
     branches: [ master, development, pull-request/* ]
   pull_request:
     branches: [ master, pull-request/* ]
+  workflow_dispatch:
 
 jobs:
   build-gcc-linux:
