--- a/.github/workflows/gcc-unified.yml
+++ b/.github/workflows/gcc-unified.yml
@@ -12,9 +12,12 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        cpp-ver: [11, 14, 17, 20, 23]
+        cpp-ver: [03, 11, 14, 17, 20, 23]
         no-stl: [ON, OFF]
         force-03: [ON, OFF]
+        exclude:
+          - cpp-ver: 03
+          - force-03: ON
     env:
       ASAN_OPTIONS: alloc_dealloc_mismatch=0,detect_leaks=0
       CC: gcc
