--- a/.github/workflows/gcc-unified.yml
+++ b/.github/workflows/gcc-unified.yml
@@ -1,7 +1,7 @@
 name: gcc
 on:
   push:
-    branches: [ master, development, pull-request/* ]
+#branches: [ master, development, pull-request/* ]
   pull_request:
     branches: [ master, pull-request/* ]
   workflow_dispatch:
