workflows: gcc: refactor to split steps, don't try to test with C++03

--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -18,6 +18,10 @@ jobs:
         exclude:
           - cpp-ver: 03
             force-03: ON
+        include:
+          - tests: YES
+          - tests: NO
+            cpp-ver: "03"
     env:
       ASAN_OPTIONS: alloc_dealloc_mismatch=0,detect_leaks=0
       CC: gcc
@@ -25,21 +29,34 @@ jobs:
       CXX_VER: ${{ matrix.cpp-ver }}
       FORCE_03: ${{ matrix.force-03 }}
       NO_STL: ${{ matrix.no-stl }}
+      TESTS: ${{ matrix.tests }}
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Build
+    - name: Versions
       run: |
-        cmake . \
-          -DBUILD_TESTS=ON \
+        cmake --version
+        gcc --version
+        make --version
+
+    - name: Configure
+      run: |
+        mkdir build
+        cd build
+        cmake .. \
+          -DBUILD_TESTS=${TESTS} \
           -DNO_STL=${NO_STL} \
           -DETL_USE_TYPE_TRAITS_BUILTINS=OFF \
           -DETL_USER_DEFINED_TYPE_TRAITS=OFF \
           -DETL_FORCE_TEST_CPP03=${FORCE_03} \
           -DETL_CXX_STANDARD=${CXX_VER}
-        gcc --version
+
+    - name: Build
+      run: |
+        cd build
         make -j $(nproc)
     
     - name: Run tests
-      run: ./test/etl_tests
+      if: ${{ matrix.tests == 'YES' }}
+      run: ./build/test/etl_tests
