--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -15,6 +15,7 @@ jobs:
         cpp-ver: ["03", 11, 14, 17, 20, 23]
         no-stl: [ON, OFF]
         force-03: [ON, OFF]
+        compiler: [GCC, LLVM]
         exclude:
           - cpp-ver: 03
             force-03: ON
@@ -22,10 +23,16 @@ jobs:
           - tests: YES
           - tests: NO
             cpp-ver: "03"
+          - compiler: GCC
+            cc: gcc
+            cxx: g++
+          - compiler: clang
+            cc: clang
+            cxx: clang++
     env:
       ASAN_OPTIONS: alloc_dealloc_mismatch=0,detect_leaks=0
-      CC: gcc
-      CXX: g++
+      CC: ${{ matrix.cc }}
+      CXX: ${{ matrix.cxx }}
       CXX_VER: ${{ matrix.cpp-ver }}
       FORCE_03: ${{ matrix.force-03 }}
       NO_STL: ${{ matrix.no-stl }}
