--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-gcc-linux:
-    name: GCC Linux
+  linux:
+    name: Linux
     runs-on: ubuntu-24.04
     strategy:
       matrix:
