--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -9,20 +9,23 @@ on:
 jobs:
   linux:
     name: Linux
-    runs-on: ubuntu-24.04
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         cpp-ver: ["03", 11, 14, 17, 20, 23]
         no-stl: [ON, OFF]
         force-03: [ON, OFF]
         compiler: [GCC, LLVM]
+        os: [ubuntu-24.04]
         exclude:
           - cpp-ver: 03
             force-03: ON
         include:
           - tests: YES
-          - tests: NO
-            cpp-ver: "03"
+          - cpp-ver: "03"
+            tests: NO
+          - compiler: LLVM
+            os: macos-14
           - compiler: GCC
             cc: gcc
             cxx: g++
