workflows: actually get the number of cores on MacOS

--- a/.github/workflows/posix.yml
+++ b/.github/workflows/posix.yml
@@ -65,7 +65,8 @@ jobs:
     - name: Build
       run: |
         cd build
-        make -j $(nproc)
+        # getconf as portable solution via https://stackoverflow.com/a/64571679/6178613
+        make -j $(getconf _NPROCESSORS_ONLN)
     
     - name: Run tests
       if: ${{ matrix.tests == 'YES' }}
