--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -37,14 +37,14 @@ jobs:
 
     - name: Build
       run: |
-        cmake -G "Visual Studio 17 2022" \
-          ./ \
-          -AWin32 \
-          -DBUILD_TESTS=ON \
-          -DNO_STL=${NO_STL} \
-          -DETL_USE_TYPE_TRAITS_BUILTINS=OFF \
-          -DETL_USER_DEFINED_TYPE_TRAITS=OFF \
-          -DETL_FORCE_TEST_CPP03_IMPLEMENTATION=${FORCE_03} \
+        cmake -G "Visual Studio 17 2022" `
+          ./ `
+          -AWin32 `
+          -DBUILD_TESTS=ON `
+          -DNO_STL=${NO_STL} `
+          -DETL_USE_TYPE_TRAITS_BUILTINS=OFF `
+          -DETL_USER_DEFINED_TYPE_TRAITS=OFF `
+          -DETL_FORCE_TEST_CPP03_IMPLEMENTATION=${FORCE_03} `
           -DETL_CXX_STANDARD=${CXX_VER}
         MSBuild.exe -version
         MSBuild.exe .\etl.sln
