--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -9,19 +9,16 @@ on:
 jobs:
   posix:
     name: Posix
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         cpp-ver: ["03", 11, 14, 17, 20, 23]
         no-stl: [ON, OFF]
         force-03: [ON, OFF]
         compiler: [GCC, LLVM]
-        os: [ubuntu-24.04, macos-12]
         exclude:
           - cpp-ver: 03
             force-03: ON
-          - compiler: GCC
-            os: macos-12
         include:
           - tests: YES
           - cpp-ver: "03"
