--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macos-12
     strategy:
       matrix:
-        cpp-ver: ["03", 11, 14, 17, 20, 23]
+        cpp-ver: ["03", 11, 14, 17, 20]
         no-stl: [ON, OFF]
         force-03: [ON, OFF]
         exclude:
