--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -1,4 +1,4 @@
-name: posix
+name: macos
 on:
   push:
 #branches: [ master, development, pull-request/* ]
@@ -8,7 +8,7 @@ on:
 
 jobs:
   posix:
-    name: Posix
+    name: macOS
     runs-on: macos-12
     strategy:
       matrix:
