ci: workflows: macos: missed one instance of macOS C++03

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -22,8 +22,8 @@ jobs:
             #force-03: ON
         include:
           - tests: YES
-          - cpp-ver: "03"
-            tests: NO
+          #- cpp-ver: "03"
+            #tests: NO
     env:
       ASAN_OPTIONS: alloc_dealloc_mismatch=0,detect_leaks=0
       CC: clang
