--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -1,7 +1,7 @@
 name: msvc
 on:
   push:
-#branches: [ master, development, pull-request/* ]
+    branches: [ master, development, pull-request/* ]
   pull_request:
     branches: [ master, pull-request/* ]
 
